force-app/main/default/objects/Gmail_Connection_State__c/Gmail_Connection_State__c.object-meta.xml
<CustomObject>
    <description>Runtime state for Gmail connections including access tokens, polling timestamps, and history IDs</description>
    <label>Gmail Connection State</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gmail Connection States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>