force-app/main/default/objects/Gmail_Connection_State__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Current OAuth access token for Gmail API calls</description>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>