force-app/main/default/objects/Gmail_Connection_State__c/fields/Connection_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Connection_Developer_Name__c</fullName>
    <description>Developer name linking to Gmail_Connection__mdt record</description>
    <externalId>true</externalId>
    <label>Connection Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>