force-app/main/default/objects/Gmail_Connection_State__c/fields/Emails_Processed_Today__c.field-meta.xml
<CustomField>
    <fullName>Emails_Processed_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counter of emails processed today for monitoring</description>
    <label>Emails Processed Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>