force-app/main/default/objects/Gmail_Connection_State__c/fields/Last_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Message__c</fullName>
    <description>Details of the last error encountered during polling</description>
    <label>Last Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>