force-app/main/default/objects/Gmail_Connection_State__c/fields/Last_History_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_History_Id__c</fullName>
    <description>Gmail historyId for incremental sync - used to fetch only new messages</description>
    <label>Last History ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>