force-app/main/default/objects/Gmail_Connection_State__c/fields/Last_Poll_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Poll_Timestamp__c</fullName>
    <description>Timestamp of the last polling attempt</description>
    <label>Last Poll Timestamp</label>
    <type>DateTime</type>
</CustomField>