force-app/main/default/objects/Gmail_Connection_State__c/fields/Last_Successful_Poll__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Poll__c</fullName>
    <description>Timestamp of the last successful polling operation</description>
    <label>Last Successful Poll</label>
    <type>DateTime</type>
</CustomField>