force-app/main/default/objects/Gmail_Connection_State__c/fields/Poll_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Poll_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent concurrent polling operations</description>
    <label>Poll In Progress</label>
    <type>Checkbox</type>
</CustomField>