force-app/main/default/objects/Gmail_Connection_State__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>DateTime when the current access token expires</description>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField>